[tool.poetry]
name = "aws-testlib"
version = "0.1.0"
description = "Provides support functions for testing AWS testing and mocking, namely AWS API Gateway Velocity engine"
authors = ["Martin Macak <martin.macak@gmail.com>"]
readme = "README.md"
packages = [
    { include = "aws_testlib" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
mock = "^5.1.0"
jsonpath-ng = "^1.6.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
moto = "^4.2.13"
openapi-spec-validator = "^0.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pycrunch-engine = "^1.6.3"
boto3 = "^1.34.23"

[tool.poetry-dynamic-versioning]
enable = true


[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.pytest.ini_options]
markers = [
    "unit: unit tests",
]
